[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "haikubot"
version = "0.3.0"
description = "Slack app for generating haikus from remembered chat messages"
authors = ["William Dye"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
requests = "^2.32.3"
pymongo = "^4.11.3"

[tool.poetry.scripts]
haikubot = "haikubot.__main__:main"
